# QEM_Simplification

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
includes/: Edge.h  Face.h  Mesh.h  QEM.h  Vertex.h  common.h
shader/: vertex.glsl
src/: QEM.cpp  common.cpp  main.cpp
